# toybox

./: .clang-format  CMakeLists.txt  build.py
include/: ALL.hpp  NGN.hpp  RAW.hpp  common.hpp  globals.hpp  wireframe.hpp
src/: ALL.h  Clock.cpp  Clock.hpp  Common.hpp  FileUtils.hpp  Globals.hpp  RAW.h  Shader.hpp  Wireframe.hpp  common.h  file.cpp  main.cpp  par_ALL.cpp  par_Geom.cpp  par_NGN.cpp  par_RAW.cpp  par_Tex.cpp  shader.cpp  structs.h  wireframe.cpp
src/Parsers/: ALLParser.cpp  ALLParser.hpp  BinaryReader.cpp  BinaryReader.hpp  DATParser.cpp  DATParser.hpp  GeomParser.cpp  GeomParser.hpp  NGNParser.cpp  NGNParser.hpp  RAWParser.cpp  RAWParser.hpp  TextureParser.cpp  TextureParser.hpp
src/parse/: par_ALL.cpp  par_Geom.cpp  par_NGN.cpp  par_RAW.cpp  par_Tex.cpp
